# Bipedal_Robot

./: LICENSE  README.md  TO_DO.txt  joypad.html
bipedal_robot_msgs/msg/: FeetPositions.msg  JointAngles.msg  UserCommands.msg
config/: robot_parameters.yaml
include/: constants.hpp
msg/: IMUData.msg  JointsAngles.msg  UserCommands.msg
src/: joypad_teleop_node.cpp  state_machine_node.cpp
src/bipedal_robot_control/src/bipedal_robot_msgs/msg/: FootPositions.msg
src/bipedal_robot_control/src/config/: robot_parameters.yaml
src/my_robot_control/: CMakeLists.txt  package.xml
src/my_robot_control/include/my_robot_control/: controller.hpp
src/my_robot_control/launch/: control.launch.py
src/my_robot_control/src/: controller.cpp
srv/: FootTrajectory.srv
