<?xml version="1.0"?>
<package format="3">
  <name>my_robot_control</name>
  <version>0.0.1</version>
  <description>Node di controllo del robot</description>

  <maintainer email="tu@email.com">Il Tuo Nome</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
